--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     ]
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.0.4",
+    "dotenv": "^16.0.1",
     "hardhat-abi-exporter": "^2.9.0"
   }
 }
