--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     ]
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-etherscan": "^3.0.4",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "dotenv": "^16.0.1",
-    "hardhat-abi-exporter": "^2.9.0"
+    "hardhat-gas-reporter": "^1.0.8"
   }
 }
