--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "decentral-medium",
+  "name": "decentral-airbnb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,18 +10,15 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
     "google-maps-react": "^2.0.6",
-    "hardhat": "^2.9.3",
+    "hardhat": "^2.12.2",
     "ipfs-http-client": "^56.0.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
@@ -63,6 +60,8 @@
     ]
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "dotenv": "^16.0.1",
     "hardhat-gas-reporter": "^1.0.8"
