--- a/package.json
+++ b/package.json
@@ -6,23 +6,21 @@
     "@chainlink/contracts": "^0.4.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@metamask/jazzicon": "^2.0.0",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
-    "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "DatePicker": "^2.0.0",
+    "axios": "^1.2.0",
     "bootstrap": "^5.1.3",
     "chai": "^4.3.6",
     "ethers": "^5.6.5",
     "google-maps-react": "^2.0.6",
     "hardhat": "^2.12.2",
-    "ipfs-http-client": "^56.0.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
-    "react-date-range": "^1.4.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
@@ -33,6 +31,7 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
+    "web3.storage": "^4.4.0",
     "web3modal": "^1.9.7"
   },
   "scripts": {
